# Olang

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Cargo.toml  DEVELOPMENT.md  NOTICE  ORIGIN.md  README.md  SPEC.md  big_iron_to_my_texas_red.sh  computed_plot  cvelist-html  cvelist-our  cvelist.diff  env_split  extract-md-files.py  extract.py  hello  nix_basic  script  setup.sh  sql_create_insert_select  test.html  test_o_lang_examples.sh  value.rs
.github/workflows/: ci.yml  fuzz.yml
Olang_Mascot_little-o/little-o/: pet_request.json
Olang_Mascot_little-o/little-o/final/: validation.json
Olang_Mascot_little-o/little-o/qa/: review.json  run-summary.json
backends/: bash_shim.py  common_lisp_shim.py  cpp_shim.py  csharp_shim.py  haskell_shim.py  java_shim.py  javascript_shim.py  lisp_shim.py  mathematica_shim.py  matlab_shim.py  nix_shim.py  nix_store_shim.py  nixos_test_shim.py  o_shim_common.py  ocaml_shim.py  python_shim.py  racket_shim.py  ruby_shim.py  rust_shim.py  sh_shim.py  shell_shim.py  sql_shim.py  webassembly_shim.py
c_cpp/: CMakeLists.txt  Makefile  O  README.md  cmake_install.cmake  olangc
c_cpp/include/: eval.h  eval.hpp  nix_ops.h  nix_ops.hpp  nixos_ops.hpp  parser.h  process.h  process.hpp  scheduler.h  scheduler.hpp  value.h
c_cpp/src/: eval.c  eval.cpp  main.c  main.cpp  nix_ops.c  nix_ops.cpp  nixos_ops.c  nixos_ops.cpp  olangc.c  olangc.cpp  parser.c  process.c  process.cpp  scheduler.c  scheduler.cpp  value.c
docs/: OCORE.md
examples/: computed_plot.html  hello.html  literate_report.md  meta_eval  nix_basic  nix_storepath  script_import.py  script_import.sh
extracted_segments/: 0000_original.md  manifest.json
extracted_segments/production/: o-process.rkt  o-wire.rkt  o.toml  o_backend.py  o_eval.py  o_run.py  o_value.py
extracted_segments/production/backends/: python_backend.py  python_shim.py
extracted_segments/segments/: 0001_markdown.md  0002_o_parser.py  0003_o_value.py  0004_o_backend.py  0005_backends__python_backend.py  0006_o_eval.py  0007_o_run.py  0008_o.toml  0009_o-wire.rkt  0010_o-process.rkt  0011_backends__python_shim.py  0012_o-parser.rkt  Untitled-1.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parser/: seed-escapes  seed-malformed  seed-nested-blocks
fuzz/fuzz_targets/: parser.rs
o_lang/: __init__.py  __main__.py  cli.py  evaluator.py  ovalue.py  parser.py
o_lang/backends/: __init__.py  base.py  html_backend.py  latex_backend.py  markdown_backend.py  nix_backend.py  nix_store_backend.py  nixos_test_backend.py  o_backend.py  python_backend.py  quote_backend.py  text_backend.py
ocore/: README.md
ocore/examples/: minimal.oc
ocore/kernel/: boot.S  build.sh  linker.ld  main.oc  run-qemu.sh  smoke-qemu.sh
ocore/runtime/x86_64/: capability.oc  interrupts.oc  pages.oc  serial.oc  syscall.oc
setup/os/: README.md  setup-alpine.sh  setup-arch.sh  setup-debian.sh  setup-fedora.sh  setup-freebsd.sh  setup-gentoo.sh  setup-macos.sh  setup-nixos.sh  setup-opensuse.sh  setup-tinycore.sh  setup-void.sh  setup-windows.sh
src/: backend.rs  capability.rs  eval.rs  ir.rs  lib.rs  main.rs  nix_ops.rs  nixos_ops.rs  parser.rs  process.rs  scheduler.rs  shims.rs  value.rs  wire.rs
src/hgraph/: from_oir.rs  graph.rs  kinds.rs  mod.rs  schedule.rs  solve.rs
src/ocore/: ast.rs  capability_bridge.rs  codegen.rs  driver.rs  hir.rs  lexer.rs  mir.rs  mod.rs  parser.rs  typeck.rs
tests/: olink_roundtrip_proptest.rs  parser_proptest.rs  test_cli.sh  test_evaluator.py  test_parser.py
