[package]
name        = "o-lang"
version     = "0.2.0"
edition     = "2021"
description = "The O Language: a universal polyglot expression framework"
authors     = ["Lee Daghlar Ostadi"]
license     = "Apache-2.0"
# `cargo run` and the test_o_lang_examples.sh smoke suite invoke the
# interpreter; default-run pins that so they don't have to spell --bin O.
default-run = "O"

[[bin]]
name = "O"
path = "src/main.rs"

[[bin]]
name = "olangc"
path = "src/bin/olangc.rs"

[[bin]]
name = "ocorec"
path = "src/bin/ocorec.rs"

[[bin]]
name = "o-link"
path = "src/bin/olink.rs"

[[bin]]
name = "o-unlink"
path = "src/bin/ounlink.rs"

[[bin]]
name = "o-notebook"
path = "src/bin/o-notebook.rs"
required-features = ["notebook"]

[features]
notebook = ["dep:axum", "dep:tokio"]

[dependencies]
# Serialization: OValue wire protocol
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["preserve_order"] }

# base64 encoding for OBlob wire transport
base64      = "0.22"

# o.toml manifest parsing
toml        = "0.8"

# PATH resolution for backend binary checking
which       = "6"

# semver version checking for backend dependency resolution
semver      = { version = "1", features = ["serde"] }

# SHA-256 fingerprinting for ONixExpr cache keys
sha2        = "0.10"
hex         = "0.4"

# Operating-system entropy for live bearer capability identities
getrandom   = "0.4.3"

# Typed errors with zero boilerplate
thiserror   = "2"
anyhow      = "1"

# CLI argument parsing
clap        = { version = "4", features = ["derive"] }

# Git-compatible .gitignore and .olinkignore matching for o-link
ignore      = "0.4"

# REPL line editing: history, arrow keys, Ctrl+A/E, Ctrl+C/D
rustyline   = "14"

# Notebook server (opt-in via --features notebook)
axum        = { version = "0.7", optional = true }
tokio       = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level       = 3
lto             = "fat"     # Fat LTO with maximum cross-crate inlining
codegen-units   = 1         # Single codegen unit for maximum optimization surface
panic           = "abort"   # No unwinding overhead
strip           = "symbols" # Strip debug symbols from release binary
overflow-checks = false     # No overflow panics in release (panic=abort anyway)
